--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://cdn.bootcss.com/axios/0.19.0-beta.1/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./libs/GL_Util.js"></script>
     <script src="./libs/Matrix.js"></script>
     <script src="./libs/dat.gui.js"></script>
@@ -16,14 +16,20 @@
             margin: 0;
         }
         .canvas-wrapper {
+            position: relative;
             margin: 0 auto;
-            width: 600px;   
-            height: 600px;
+            margin-top: 20vh;
+            width: 60vw;
+            height: 30vw;
+            background-image: url("./assets/world.jpg");
+            background-size: contain;
         }
         #canvas {
+            /* display: none; */
             width: 100%;
             height: 100%;
             box-shadow: 2px 5px 10px #ddd;
+            z-index:110;
         }
     </style>
 </head>
